Improved statistic tests

--- a/statistic_test.ipynb
+++ b/statistic_test.ipynb
@@ -2,11 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "efficiency_1 = [\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "data_excel_0 = pd.DataFrame(pd.read_excel(\"data.xlsx\", sheet_name=0, keep_default_na=False).head(90))\n",
+    "data_excel_1 = pd.DataFrame(pd.read_excel(\"data.xlsx\", sheet_name=1, keep_default_na=False).head(90))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arek/PWR/Semestr_3/symulacja_komputerowa/intersection-simulation/Intersection-simulation/venv/lib/python3.12/site-packages/numpy/_core/fromnumeric.py:3904: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/home/arek/PWR/Semestr_3/symulacja_komputerowa/intersection-simulation/Intersection-simulation/venv/lib/python3.12/site-packages/numpy/_core/_methods.py:147: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
+   "source": [
+    "efficiency_data_0 = data_excel_0[\"Efficiency\"]\n",
+    "efficiency_data_1 = data_excel_1[\"Efficiency\"]\n",
+    "\n",
+    "k_list  = []\n",
+    "for i in range(0, len(efficiency_data_0)):\n",
+    "    k_list.append(round(abs(efficiency_data_0[i] - efficiency_data_1[i]), 2))\n",
+    "\n",
+    "k_means = []\n",
+    "for z in (0, len(k_list), 5):\n",
+    "    k_means.append(np.mean(k_list[z:z+5]))\n",
+    "\n",
+    "shapiro_results = []\n",
+    "for j in range(0, len(efficiency_data_0), 5):\n",
+    "    shapiro_results.append(stats.shapiro(k_list[j:j+5]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "H0 - Pochodzi z normalnego,\n",
+    "HA - Nie pochozi z normalnego"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal_test_results = []\n",
+    "for shapiro_test in shapiro_results:\n",
+    "    if shapiro_test[1] > 0.01:\n",
+    "        normal_test_results.append(0)\n",
+    "    else:\n",
+    "        normal_test_results.append(1)\n",
+    "\n",
+    "normal_test_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_efficiency_0 = [\n",
     "    0.20,\n",
     "    0.20,\n",
     "    0.19,\n",
@@ -30,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "efficiency_2 = [\n",
+    "mean_efficiency_1 = [\n",
     "    0.17,\n",
     "    0.18,\n",
     "    0.18,\n",
@@ -53,61 +135,52 @@
     "    0.32,\n",
     "    0.30,\n",
     "    0.31\n",
-    "\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "combine_efficiency = []\n",
-    "for i in range(len(efficiency_1)):\n",
-    "    combine_efficiency.append(round(abs(efficiency_1[i]-efficiency_2[i]),2))"
+    "for i in range(len(mean_efficiency_0)):\n",
+    "    combine_efficiency.append(round(abs(mean_efficiency_0[i] - mean_efficiency_1[i]), 2))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.03,\n",
-       " 0.02,\n",
-       " 0.01,\n",
-       " 0.01,\n",
-       " 0.03,\n",
-       " 0.04,\n",
-       " 0.04,\n",
-       " 0.06,\n",
-       " 0.05,\n",
-       " 0.06,\n",
-       " 0.04,\n",
-       " 0.06,\n",
-       " 0.03,\n",
-       " 0.01,\n",
-       " 0.06,\n",
-       " 0.1,\n",
-       " 0.11,\n",
-       " 0.1]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "combine_efficiency"
+    "Test jednostronny"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_test_results = []\n",
+    "p_value_results = []\n",
+    "H_results = []\n",
+    "\n",
+    "for i in range(0, len(k_list), 5):\n",
+    "    t_stat, p_value = stats.ttest_1samp(k_list[i:i+5], 0, alternative='greater')\n",
+    "    if p_value < 0.05:\n",
+    "        H = 0\n",
+    "    else:\n",
+    "        H = 1\n",
+    "    t_test_results.append(t_stat)\n",
+    "    p_value_results.append(p_value)\n",
+    "    H_results.append(H)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -131,181 +204,286 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Combined</th>\n",
+       "      <th>Cars</th>\n",
+       "      <th>Velocity</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Combined Means</th>\n",
+       "      <th>Normal Hypotesis</th>\n",
+       "      <th>t Value</th>\n",
+       "      <th>p Value</th>\n",
+       "      <th>Student Hypotesis</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.486833</td>\n",
+       "      <td>0.000344</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>0.02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>0.000422</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>0.012448</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>100</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.207135</td>\n",
+       "      <td>0.016339</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>100</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>0.03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.706787</td>\n",
+       "      <td>0.004631</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>100</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.500000</td>\n",
+       "      <td>0.000525</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>100</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.155927</td>\n",
+       "      <td>0.000265</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>100</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>0.06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.590271</td>\n",
+       "      <td>0.000225</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>100</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.646941</td>\n",
+       "      <td>0.001330</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>500</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.570197</td>\n",
+       "      <td>0.000039</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
+       "      <td>500</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>0.04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>0.000422</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>500</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.500000</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>500</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>0.000023</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
+       "      <td>500</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.064187</td>\n",
+       "      <td>0.053969</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
+       "      <td>500</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.946918</td>\n",
+       "      <td>0.000287</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
+       "      <td>500</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.431677</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
+       "      <td>500</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>0.11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.839200</td>\n",
+       "      <td>0.000146</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
+       "      <td>500</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.811388</td>\n",
+       "      <td>0.000047</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Combined\n",
-       "0       0.03\n",
-       "1       0.02\n",
-       "2       0.01\n",
-       "3       0.01\n",
-       "4       0.03\n",
-       "5       0.04\n",
-       "6       0.04\n",
-       "7       0.06\n",
-       "8       0.05\n",
-       "9       0.06\n",
-       "10      0.04\n",
-       "11      0.06\n",
-       "12      0.03\n",
-       "13      0.01\n",
-       "14      0.06\n",
-       "15      0.10\n",
-       "16      0.11\n",
-       "17      0.10"
+       "   Cars Velocity Length  Combined Means  Normal Hypotesis    t Value  \\\n",
+       "0   100        5      4            0.03                 0   9.486833   \n",
+       "1   100        5    4.5            0.02                 1   9.000000   \n",
+       "2   100        5      5            0.01                 0   3.500000   \n",
+       "3   100        6      4            0.01                 0   3.207135   \n",
+       "4   100        6    4.5            0.03                 0   4.706787   \n",
+       "5   100        6      5            0.04                 0   8.500000   \n",
+       "6   100        7      4            0.04                 0  10.155927   \n",
+       "7   100        7    4.5            0.06                 0  10.590271   \n",
+       "8   100        7      5            0.05                 0   6.646941   \n",
+       "9   500        5      4            0.06                 0  16.570197   \n",
+       "10  500        5    4.5            0.04                 0   9.000000   \n",
+       "11  500        5      5            0.06                 0  16.500000   \n",
+       "12  500        6      4            0.03                 1  19.000000   \n",
+       "13  500        6    4.5            0.01                 0   2.064187   \n",
+       "14  500        6      5            0.06                 0   9.946918   \n",
+       "15  500        7      4            0.10                 0  16.431677   \n",
+       "16  500        7    4.5            0.11                 0  11.839200   \n",
+       "17  500        7      5            0.10                 0  15.811388   \n",
+       "\n",
+       "     p Value  Student Hypotesis  \n",
+       "0   0.000344                  0  \n",
+       "1   0.000422                  0  \n",
+       "2   0.012448                  0  \n",
+       "3   0.016339                  0  \n",
+       "4   0.004631                  0  \n",
+       "5   0.000525                  0  \n",
+       "6   0.000265                  0  \n",
+       "7   0.000225                  0  \n",
+       "8   0.001330                  0  \n",
+       "9   0.000039                  0  \n",
+       "10  0.000422                  0  \n",
+       "11  0.000040                  0  \n",
+       "12  0.000023                  0  \n",
+       "13  0.053969                  1  \n",
+       "14  0.000287                  0  \n",
+       "15  0.000040                  0  \n",
+       "16  0.000146                  0  \n",
+       "17  0.000047                  0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "data = pd.DataFrame(combine_efficiency,columns=['Combined'])\n",
+    "data_excel_params = pd.DataFrame(pd.read_excel(\"data.xlsx\", sheet_name=0, keep_default_na=False, usecols=\"J:L\").head(18))\n",
+    "\n",
+    "data = pd.DataFrame()\n",
+    "data[\"Cars\"] = data_excel_params['Unnamed: 9']\n",
+    "data[\"Velocity\"] = data_excel_params['Unnamed: 10']\n",
+    "data[\"Length\"] = data_excel_params['Unnamed: 11']\n",
+    "data[\"Combined Means\"] = combine_efficiency\n",
+    "data[\"Normal Hypotesis\"] = normal_test_results\n",
+    "data[\"t Value\"] = t_test_results\n",
+    "data[\"p Value\"] = p_value_results\n",
+    "data[\"Student Hypotesis\"] = H_results\n",
+    "\n",
     "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Combined    0.047778\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test jednostronny"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Statystyka t: 6.58\n",
-      "P-wartość: 2.3e-06\n",
-      "Odrzucam H0, przyjmuje Ha\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "\n",
-    "t_stat, p_value = stats.ttest_1samp(data, 0, alternative='greater')\n",
-    "\n",
-    "print(f\"Statystyka t: {round(t_stat[0],2)}\")\n",
-    "print(f\"P-wartość: {round(p_value[0],7)}\")\n",
-    "\n",
-    "if p_value < 0.05:\n",
-    "    print(\"Odrzucam H0, przyjmuje Ha\")\n",
-    "else:\n",
-    "    print(\"Odrzucam Ha, przyjmuje H0\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
