--- a/statistic_test.ipynb
+++ b/statistic_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/arek/PWR/Semestr_3/symulacja_komputerowa/intersection-simulation/Intersection-simulation/venv/lib/python3.12/site-packages/numpy/_core/fromnumeric.py:3904: RuntimeWarning: Mean of empty slice.\n",
+      "e:\\GutHub Projects\\Symulacja Komputerowa\\Intersection-simulation\\.venv\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:3904: RuntimeWarning: Mean of empty slice.\n",
       "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/home/arek/PWR/Semestr_3/symulacja_komputerowa/intersection-simulation/Intersection-simulation/venv/lib/python3.12/site-packages/numpy/_core/_methods.py:147: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "e:\\GutHub Projects\\Symulacja Komputerowa\\Intersection-simulation\\.venv\\Lib\\site-packages\\numpy\\_core\\_methods.py:147: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
      ]
     }
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]"
+       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,17 +74,17 @@
    "source": [
     "normal_test_results = []\n",
     "for shapiro_test in shapiro_results:\n",
-    "    if shapiro_test[1] > 0.01:\n",
-    "        normal_test_results.append(0)\n",
+    "    if shapiro_test[1] > 0.0001:\n",
+    "        normal_test_results.append(0) # H0 - normalny \n",
     "    else:\n",
-    "        normal_test_results.append(1)\n",
+    "        normal_test_results.append(1) # Ha - nienormalny\n",
     "\n",
     "normal_test_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +168,8 @@
     "\n",
     "for i in range(0, len(k_list), 5):\n",
     "    t_stat, p_value = stats.ttest_1samp(k_list[i:i+5], 0, alternative='greater')\n",
-    "    if p_value < 0.05:\n",
-    "        H = 0\n",
+    "    if p_value > 0.05:\n",
+    "        H = 0 # \n",
     "    else:\n",
     "        H = 1\n",
     "    t_test_results.append(t_stat)\n",
@@ -180,7 +180,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.02,\n",
+       " 0.04,\n",
+       " 0.03,\n",
+       " 0.03,\n",
+       " 0.03,\n",
+       " 0.02,\n",
+       " 0.02,\n",
+       " 0.01,\n",
+       " 0.02,\n",
+       " 0.02,\n",
+       " 0.02,\n",
+       " 0.02,\n",
+       " 0.01,\n",
+       " 0.0,\n",
+       " 0.02,\n",
+       " 0.01,\n",
+       " 0.0,\n",
+       " 0.01,\n",
+       " 0.02,\n",
+       " 0.02,\n",
+       " 0.01,\n",
+       " 0.02,\n",
+       " 0.04,\n",
+       " 0.03,\n",
+       " 0.02,\n",
+       " 0.04,\n",
+       " 0.02,\n",
+       " 0.03,\n",
+       " 0.04,\n",
+       " 0.04,\n",
+       " 0.03,\n",
+       " 0.05,\n",
+       " 0.04,\n",
+       " 0.03,\n",
+       " 0.04,\n",
+       " 0.05,\n",
+       " 0.05,\n",
+       " 0.06,\n",
+       " 0.07,\n",
+       " 0.04,\n",
+       " 0.07,\n",
+       " 0.07,\n",
+       " 0.04,\n",
+       " 0.06,\n",
+       " 0.03,\n",
+       " 0.07,\n",
+       " 0.06,\n",
+       " 0.05,\n",
+       " 0.07,\n",
+       " 0.06,\n",
+       " 0.03,\n",
+       " 0.05,\n",
+       " 0.03,\n",
+       " 0.04,\n",
+       " 0.03,\n",
+       " 0.06,\n",
+       " 0.06,\n",
+       " 0.06,\n",
+       " 0.07,\n",
+       " 0.08,\n",
+       " 0.03,\n",
+       " 0.04,\n",
+       " 0.04,\n",
+       " 0.04,\n",
+       " 0.04,\n",
+       " 0.01,\n",
+       " 0.01,\n",
+       " 0.01,\n",
+       " 0.02,\n",
+       " 0.0,\n",
+       " 0.07,\n",
+       " 0.05,\n",
+       " 0.06,\n",
+       " 0.04,\n",
+       " 0.07,\n",
+       " 0.08,\n",
+       " 0.08,\n",
+       " 0.09,\n",
+       " 0.11,\n",
+       " 0.09,\n",
+       " 0.13,\n",
+       " 0.13,\n",
+       " 0.08,\n",
+       " 0.11,\n",
+       " 0.13,\n",
+       " 0.1,\n",
+       " 0.08,\n",
+       " 0.12,\n",
+       " 0.1,\n",
+       " 0.1]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +333,7 @@
        "      <td>0</td>\n",
        "      <td>9.486833</td>\n",
        "      <td>0.000344</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -232,10 +341,10 @@
        "      <td>5</td>\n",
        "      <td>4.5</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>9.000000</td>\n",
        "      <td>0.000422</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -246,7 +355,7 @@
        "      <td>0</td>\n",
        "      <td>3.500000</td>\n",
        "      <td>0.012448</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -257,7 +366,7 @@
        "      <td>0</td>\n",
        "      <td>3.207135</td>\n",
        "      <td>0.016339</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -268,7 +377,7 @@
        "      <td>0</td>\n",
        "      <td>4.706787</td>\n",
        "      <td>0.004631</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -279,7 +388,7 @@
        "      <td>0</td>\n",
        "      <td>8.500000</td>\n",
        "      <td>0.000525</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -290,7 +399,7 @@
        "      <td>0</td>\n",
        "      <td>10.155927</td>\n",
        "      <td>0.000265</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -301,7 +410,7 @@
        "      <td>0</td>\n",
        "      <td>10.590271</td>\n",
        "      <td>0.000225</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -312,7 +421,7 @@
        "      <td>0</td>\n",
        "      <td>6.646941</td>\n",
        "      <td>0.001330</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -323,7 +432,7 @@
        "      <td>0</td>\n",
        "      <td>16.570197</td>\n",
        "      <td>0.000039</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -334,7 +443,7 @@
        "      <td>0</td>\n",
        "      <td>9.000000</td>\n",
        "      <td>0.000422</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -345,7 +454,7 @@
        "      <td>0</td>\n",
        "      <td>16.500000</td>\n",
        "      <td>0.000040</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -353,10 +462,10 @@
        "      <td>6</td>\n",
        "      <td>4</td>\n",
        "      <td>0.03</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>19.000000</td>\n",
        "      <td>0.000023</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -365,8 +474,8 @@
        "      <td>4.5</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0</td>\n",
-       "      <td>2.064187</td>\n",
-       "      <td>0.053969</td>\n",
+       "      <td>3.162278</td>\n",
+       "      <td>0.017055</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -378,7 +487,7 @@
        "      <td>0</td>\n",
        "      <td>9.946918</td>\n",
        "      <td>0.000287</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -389,7 +498,7 @@
        "      <td>0</td>\n",
        "      <td>16.431677</td>\n",
        "      <td>0.000040</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -400,7 +509,7 @@
        "      <td>0</td>\n",
        "      <td>11.839200</td>\n",
        "      <td>0.000146</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -411,7 +520,7 @@
        "      <td>0</td>\n",
        "      <td>15.811388</td>\n",
        "      <td>0.000047</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -420,7 +529,7 @@
       "text/plain": [
        "   Cars Velocity Length  Combined Means  Normal Hypotesis    t Value  \\\n",
        "0   100        5      4            0.03                 0   9.486833   \n",
-       "1   100        5    4.5            0.02                 1   9.000000   \n",
+       "1   100        5    4.5            0.02                 0   9.000000   \n",
        "2   100        5      5            0.01                 0   3.500000   \n",
        "3   100        6      4            0.01                 0   3.207135   \n",
        "4   100        6    4.5            0.03                 0   4.706787   \n",
@@ -431,35 +540,35 @@
        "9   500        5      4            0.06                 0  16.570197   \n",
        "10  500        5    4.5            0.04                 0   9.000000   \n",
        "11  500        5      5            0.06                 0  16.500000   \n",
-       "12  500        6      4            0.03                 1  19.000000   \n",
-       "13  500        6    4.5            0.01                 0   2.064187   \n",
+       "12  500        6      4            0.03                 0  19.000000   \n",
+       "13  500        6    4.5            0.01                 0   3.162278   \n",
        "14  500        6      5            0.06                 0   9.946918   \n",
        "15  500        7      4            0.10                 0  16.431677   \n",
        "16  500        7    4.5            0.11                 0  11.839200   \n",
        "17  500        7      5            0.10                 0  15.811388   \n",
        "\n",
        "     p Value  Student Hypotesis  \n",
-       "0   0.000344                  0  \n",
-       "1   0.000422                  0  \n",
-       "2   0.012448                  0  \n",
-       "3   0.016339                  0  \n",
-       "4   0.004631                  0  \n",
-       "5   0.000525                  0  \n",
-       "6   0.000265                  0  \n",
-       "7   0.000225                  0  \n",
-       "8   0.001330                  0  \n",
-       "9   0.000039                  0  \n",
-       "10  0.000422                  0  \n",
-       "11  0.000040                  0  \n",
-       "12  0.000023                  0  \n",
-       "13  0.053969                  1  \n",
-       "14  0.000287                  0  \n",
-       "15  0.000040                  0  \n",
-       "16  0.000146                  0  \n",
-       "17  0.000047                  0  "
+       "0   0.000344                  1  \n",
+       "1   0.000422                  1  \n",
+       "2   0.012448                  1  \n",
+       "3   0.016339                  1  \n",
+       "4   0.004631                  1  \n",
+       "5   0.000525                  1  \n",
+       "6   0.000265                  1  \n",
+       "7   0.000225                  1  \n",
+       "8   0.001330                  1  \n",
+       "9   0.000039                  1  \n",
+       "10  0.000422                  1  \n",
+       "11  0.000040                  1  \n",
+       "12  0.000023                  1  \n",
+       "13  0.017055                  1  \n",
+       "14  0.000287                  1  \n",
+       "15  0.000040                  1  \n",
+       "16  0.000146                  1  \n",
+       "17  0.000047                  1  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +592,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
